--- a/finetuned_ncnn_model/metadata.yaml
+++ b/finetuned_ncnn_model/metadata.yaml
@@ -1,6 +1,6 @@
-description: Ultralytics best model trained on data.yaml
+description: Ultralytics YOLO11n model trained on data.yaml
 author: Ultralytics
-date: '2024-10-24T16:57:54.282122'
+date: '2024-11-15T18:39:21.501934'
 version: 8.3.13
 license: AGPL-3.0 License (https://ultralytics.com/license)
 docs: https://docs.ultralytics.com
